PP-FEAT-forgot password

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -42,7 +42,7 @@
           <input type="checkbox">
           <h6>Remember Me</h6>
         </div>
-        <h6><a style="float: right; cursor: pointer" cFormCheckLabel for="checkOne">forgot password ?</a></h6>
+        <h6><a style="float: right; cursor: pointer" cFormCheckLabel for="checkOne" (click)="forgotPassword()">forgot password ?</a></h6>
       </div><br>
       <button type="submit" (click)="onSubmit()">Login</button>
       <br>
