--- a/src/app/pages/my-applications/my-applications.component.html
+++ b/src/app/pages/my-applications/my-applications.component.html
@@ -11,13 +11,13 @@
                     <th>Edit for correction</th>
                 </tr>
             </ng-template>
+            <!-- [value]="myApplicationData.id"  [value]="myApplicationData.created_at" -->
             <ng-template pTemplate="caption">
                 <div class="row">
                     <div class="col-md-2">
                         <div class="card flex flex-wrap justify-content-center">
                             <span>
-                                <input class="p-inputtext-lg" type="text" [value]="myApplicationData.id" pInputText
-                                    style="width: 100%;" />
+                                <input class="p-inputtext-lg" type="text" pInputText style="width: 100%;" />
                             </span>
                         </div>
                     </div>
@@ -25,8 +25,7 @@
                     <div class="col-md-2">
                         <div class="card flex flex-wrap justify-content-right">
                             <span>
-                                <input class="p-inputtext-lg" type="text" [value]="myApplicationData.created_at"
-                                    pInputText style="width: 100%;" />
+                                <input class="p-inputtext-lg" type="text" pInputText style="width: 100%;" />
                             </span>
                         </div>
                     </div>
@@ -163,7 +162,7 @@
                             </a>
                         </div>
                     </td>
-                </tr>   
+                </tr>
             </ng-template>
         </p-table>
     </div>
