SR-FEAT-WES details check and payment issue image view

--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -4,7 +4,7 @@
     <!-- Copyright -->
     <div class="copyright">
     <div class="text-center p-2" style="background: #fff; float: left; width: 15%;color: black;">
-      <span class="created-by">Created with <mat-icon class="heart-icon">favorite</mat-icon> by <b><a href="http://edulab.in" target="_blank">Edulab</a></b> 2021</span>
+      <span class="created-by">Created with <mat-icon class="heart-icon">favorite</mat-icon> by <b><a href="http://edulab.in" target="_blank">Edulab </a></b>{{date | date: 'yyyy'}}</span>
     </div>
   </div>
 
